<resources>
    <string name="app_name">Inventory App</string>
    <string name="uri_scheme">content://</string>
    <string name="error_item_name_required">Item name is required</string>
    <string name="error_item_price_required">Item price is required.</string>
    <string name="error_item_quantity_required">Item quantity is required.</string>
    <string name="error_insert_failed">Insert failed for</string>
    <string name="exception_query_not_supported">Query not supported for </string>
    <string name="exception_insert_not_supported">Item insert not supported for </string>
    <string name="exception_update_not_supported">Item update not supported for </string>
    <string name="exception_unknown_uri_type">Unknown URI</string>
    <string name="exception_with_match">with match</string>
    <string name="label_empty_view_text">Add an item now...</string>
    <string name="buttonTextSale">Sale</string>
    <string name="hint_product_description">Description</string>
    <string name="hint_product_quantity">Quantity</string>
    <string name="hint_product_price">Price</string>
    <string name="confirmation_order_product">Make a call to order %1$s?</string>
    <string name="confirmation_delete_product">Delete product %1$s?</string>
    <string name="dialog_text_yes">Yes</string>
    <string name="dialog_text_no">No</string>
    <string name="message_product_deleted">Product %1$s deleted.</string>
    <string name="message_product_saved">New product %1$s saved.</string>
    <string name="message_product_updated">Product %1$s updated.</string>
    <string name="validation_product_name_required">Product name is required.</string>
    <string name="hint_name">Name</string>
    <string name="label_field_name">Name</string>
    <string name="label_field_quantity">Quantity</string>
    <string name="label_field_description">Description</string>
    <string name="label_field_price">Price</string>
    <string name="column_label_product">Product</string>
    <string name="column_label_quantity">Quantity</string>
    <string name="column_label_price">Price</string>
    <string name="button_label_decrease">-</string>
    <string name="hint_zero">0</string>
    <string name="button_label_increase">+</string>
    <string name="activity_title_add_new_product">Add New Product</string>
    <string name="activity_title_update_product">Update Product</string>
    <string name="input_value_zero">0</string>
    <string name="label_field_image">Image</string>
    <string name="button_label_choose_image">Choose image</string>
    <string name="button_label_remove_image">Remove Image</string>
    <string name="content_description_image_selected">Image selected from gallery</string>
    <string name="message_gallery_access_not_granted">Gallery access not granted.</string>
</resources>
