<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ProductDetailActivity">

    <LinearLayout
        android:id="@+id/layoutInputFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!-- Field labels -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!-- Name label -->
            <TextView
                android:id="@+id/labelProductName"
                android:text="@string/label_field_name"
                android:layout_weight="1"
                style="@style/LabelOnTopStart"/>

            <!-- Description label -->
            <TextView
                android:id="@+id/labelProductDescription"
                android:text="@string/label_field_description"
                android:layout_weight="1"
                style="@style/TextProductDetail"/>

            <!-- Quantity label -->
            <TextView
                android:id="@+id/labelProductQuantity"
                android:text="@string/label_field_quantity"
                android:layout_weight="1"
                style="@style/TextProductDetail"/>

            <TextView
                android:id="@+id/labelProductPrice"
                android:text="@string/label_field_price"
                android:layout_weight="1"
                style="@style/TextProductDetail"/>
        </LinearLayout>

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- Name -->
            <EditText
                android:id="@+id/editProductName"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:inputType="text"
                android:hint="@string/hint_name"
                style="@style/InputFieldTop"/>

            <!-- Description -->
            <EditText
                android:id="@+id/editProductDescription"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:inputType="text"
                android:hint="@string/hint_product_description"
                style="@style/InputField"/>

            <!-- Quantity -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/editProductQuantityDisplay"
                    style="@style/InputFieldQuantity"/>

                <!-- Decrease and Increase buttons -->
                <Button
                    android:id="@+id/buttonDecreaseQuantity"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/editProductQuantity"
                    android:layout_toLeftOf="@id/editProductQuantity"
                    android:text="@string/button_label_decrease"
                    android:textAppearance="?android:textAppearanceLarge" />

                <EditText
                    android:id="@+id/editProductQuantity"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/buttonIncreaseQuantity"
                    android:layout_toLeftOf="@id/buttonIncreaseQuantity"
                    android:hint="@string/hint_zero"
                    android:inputType="number"
                    android:maxLength="4"
                    android:textAlignment="center"
                    android:textAppearance="?android:textAppearanceMedium"/>

                <Button
                    android:id="@+id/buttonIncreaseQuantity"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/button_label_increase"
                    android:textAppearance="?android:textAppearanceLarge" />
            </RelativeLayout>

            <EditText
                android:id="@+id/editProductPrice"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:hint="@string/hint_product_price"
                style="@style/InputField"/>

        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabDeleteProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutInputFields"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/ButtonStyle"
        android:src="@drawable/ic_delete_product"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabOrderProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutInputFields"
        android:layout_toLeftOf="@id/fabSaveProduct"
        android:layout_toStartOf="@id/fabSaveProduct"
        style="@style/ButtonStyle"
        android:src="@drawable/ic_order_product_call"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabSaveProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutInputFields"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        style="@style/ButtonStyle"
        android:src="@drawable/ic_save_product"/>

</RelativeLayout>
